tests/reference/run-array_bounds_check_16-2ecda69.stderr
runtime error: Argument 'y' of subroutine ss2 is unallocated.
 --> tests/errors/array_bounds_check_16.f90:5:14
  |
5 |     call ss2(y)  ! should give runtime error
  |              ^^ 
